--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Connect to datdabase
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/company
+spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore
 spring.datasource.username=postgres
 spring.datasource.password=123/*-
 
