--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.properties..hibernate.dialect = org.hibernate.dialect.PostgreSQLDiale
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
+#spring.security.user.name=antonis
+#spring.security.user.password=123/*-
